--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": " ",
+  "name": "bais",
   "version": "0.0.1",
   "description": "",
-  "keywords": "",
+  "keywords": [
+    "bais"
+  ],
   "license": "",
   "author": "",
   "scripts": {
@@ -12,6 +14,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "autoprefixer": "^10.2.5",
+    "cssnano": "^4.1.10",
+    "parcel-bundler": "^1.12.3",
+    "postcss": "^8.2.8",
+    "postcss-modules": "^4.0.0",
+    "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "normalize-scss": "^7.0.1",
+    "reset-css": "^5.0.1"
   }
 }
